--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.sql.init.platform=postgres
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/codefellowship
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/codef
+spring.datasource.username=ghadeer
 spring.datasource.password=ins
 
 spring.jpa.database=POSTGRESQL
